2001-08-28  Loren J. Rittle  <ljrittle@acm.org>

	* include/Makefile.am: Use toplevel_srcdir to refer to src files
	outside this component.
	* include/Makefile.in: Regenerate.

2001-08-27  Benjamin Kosnik  <bkoz@redhat.com>

	* config/locale/c_locale_gnu.cc: Move facet info to separate files...
	* config/locale/c_locale_generic.cc: Same.
	* config/locale/moneypunct_members_gnu.cc: New file.
	* config/locale/moneypunct_members_generic.cc: New file.	
	* config/locale/numpunct_members_gnu.cc: New file.
	* config/locale/numpunct_members_generic.cc: New file.	
	* acinclude.m4 (GLIBCPP_ENABLE_CLOCALE): Add moneypunct, numpunct
	options.
	* aclocal.m4: Regenerate.
	* configure: Regenerate.
	* src/Makefile.am (sources): And here.
	* src/Makefile.in: Regenerate.
	
	Rename for consistency with rest of testsuite.
	* testsuite/22_locale/codecvt.cc: New file.
	* testsuite/22_locale/money_put.cc: New file.
	* testsuite/22_locale/money_put_members_char.cc: New file.
	
2001-08-27  Phil Edwards  <pme@sources.redhat.com>

	PR libstdc++/4143
	* acinclude.m4 (GLIBCPP_EXPORT_INSTALL_INFO):  Handle enable/disable
	correctly for version-specific-runtime-libs.
	* aclocal.m4:  Regenerate.
	* configure:  Regenerate.

2001-08-24  Loren J. Rittle  <ljrittle@acm.org>

	* config/cpu/i386/bits/limits.h (__glibcpp_long_double_bits): Only
	define if not already provided by per-OS file.
	* config/os/bsd/freebsd/bits/os_defines.h (__glibcpp_long_double_bits):
	Define.

2001-08-24  Jan van Male <jan.vanmale@fenk.wau.nl>

	* docs/html/17_intro/C++STYLE:  Fix typo.

2001-08-24  Phil Edwards  <pme@sources.redhat.com>

	* docs/html/23_containers/howto.html:  Describe implementation of
	insertion with hints.

2001-08-24  Kenny Simpson  <kenny.simpson@gs.com>

	libstdc++/3740
	* include/bits/std_sstream.h (basic_ostringstream): Fix ctor.

2001-08-24  Sylvain Pion <Sylvain.Pion@sophia.inria.fr>
            Phil Edwards  <pme@sources.redhat.com>

	PR libstdc++/3349